--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,13 @@ version: 0.3.1
 homepage: https://github.com/maheshmnj/alphabet_scroll_view
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.16.1 <3.0.0"
+  flutter: ">=2.10.3"
 
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.15.0-nullsafety.4
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
